Updated alt text of icons

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                         <div class="share-links-desktop inactive">
                             <div class="socmed">
                                 <p>SHARE</p>
-                                <a href="#"><img src="images/icon-facebook.svg" alt=""></a>
-                                <a href="#"><img src="images/icon-twitter.svg" alt=""></a>
-                                <a href="#"><img src="images/icon-pinterest.svg" alt=""></a>
+                                <a href="#"><img src="images/icon-facebook.svg" alt="facebook icon"></a>
+                                <a href="#"><img src="images/icon-twitter.svg" alt="twitter icon"></a>
+                                <a href="#"><img src="images/icon-pinterest.svg" alt="pinterest icon"></a>
                             </div>
                             <div class="arrow-down"></div>
                         </div>
@@ -49,9 +49,9 @@
                     <div class="share-links-mobile inactive">
                         <div class="socmed">
                             <p>SHARE</p>
-                            <a href="#"><img src="images/icon-facebook.svg" alt=""></a>
-                            <a href="#"><img src="images/icon-twitter.svg" alt=""></a>
-                            <a href="#"><img src="images/icon-pinterest.svg" alt=""></a>
+                            <a href="#"><img src="images/icon-facebook.svg" alt="facebook icon"></a>
+                            <a href="#"><img src="images/icon-twitter.svg" alt="twitter icon"></a>
+                            <a href="#"><img src="images/icon-pinterest.svg" alt="pinterest icon"></a>
                         </div>
 
                         <div class="share">
